--- a/src/pages/main/main.scss
+++ b/src/pages/main/main.scss
@@ -17,10 +17,10 @@ page-main {
     }
     .ppi-circle {
         position: absolute;
-        width: 10vh;
-        height: 10vh;
-        margin-top: - 5vh;
-        margin-left: - 5vh;
+        width: 10vmin;
+        height: 10vmin;
+        margin-top: - 5vmin;
+        margin-left: - 5vmin;
         border-radius: 100px;
         top: 100px;
         left: 100px;
@@ -28,16 +28,21 @@ page-main {
         border: 1px solid green;
         overflow: hidden;
         cursor: pointer;
+        transition: width 2s,
+                    height 2s,
+                    margin-top 2s,
+                    margin-left 2s;
+        
 
         img {
             width: 100%;
             height: 100%;
         }
         &:hover {
-            width: 15vh;
-            height: 15vh;
-            margin-top: - 7.5vh;
-            margin-left: - 7.5vh;
+            width: 15vmin;
+            height: 15vmin;
+            margin-top: - 7.5vmin;
+            margin-left: - 7.5vmin;
         }
     }
 }
