--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,42 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+ion-content {
+    background-image: url('../assets/imgs/background.jpg');
+    background-size: cover;
+}
+
+page-activities, page-people {
+    .ppi-circle {
+        position: absolute;
+        background-color: white;
+        width: 10vmin;
+        height: 10vmin;
+        margin-top: - 5vmin;
+        margin-left: - 5vmin;
+        border-radius: 100vmin;
+        top: 100px;
+        left: 100px;
+        transition: 0.5;
+        border: 3px solid rgb(68, 139, 68);
+        overflow: hidden;
+        cursor: pointer;
+        transition: width 2s,
+                    height 2s,
+                    margin-top 2s,
+                    margin-left 2s;
+        
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
+        &:hover {
+            width: 15vmin;
+            height: 15vmin;
+            margin-top: - 7.5vmin;
+            margin-left: - 7.5vmin;
+        }
+    }
+}
