--- a/src/pages/main/main.scss
+++ b/src/pages/main/main.scss
@@ -4,45 +4,111 @@ page-main {
         height: 100%;
         display: flex;
         box-sizing: border-box;
-    }
-    .ppi-main-screen__people {
-        background-color: #ecfbec;
-        position: relative;
-        flex-grow: 1;
-    }
-    .ppi-main-screen__activities {
-        background-color: aliceblue;
-        position: relative;
-        flex-grow: 1;
-    }
-    .ppi-circle {
-        position: absolute;
-        width: 10vmin;
-        height: 10vmin;
-        margin-top: - 5vmin;
-        margin-left: - 5vmin;
-        border-radius: 100px;
-        top: 100px;
-        left: 100px;
-        transition: 0.5;
-        border: 1px solid green;
         overflow: hidden;
-        cursor: pointer;
-        transition: width 2s,
-                    height 2s,
-                    margin-top 2s,
-                    margin-left 2s;
-        
+        align-items: center;
 
-        img {
-            width: 100%;
-            height: 100%;
+        &_people, &_activities {
+            z-index: 10;
+            flex-grow: 1;
+            align-items: center;
+            justify-content: center;
+            display: flex;
+
+            &__button {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 100vmin;
+                overflow: hidden;
+                width: 40vmin;
+                height: 40vmin;
+                background-color: white;
+                cursor: pointer;
+                transition: box-shadow 1s;
+
+                &:hover {
+                    background-color: whitesmoke;
+                    box-shadow: 0px 0px 45px -5px black;
+                }
+            }
         }
-        &:hover {
-            width: 15vmin;
-            height: 15vmin;
-            margin-top: - 7.5vmin;
-            margin-left: - 7.5vmin;
+
+        &_greating {
+            display: flex;
+            flex-grow: 1;
+            align-items: center;
+            justify-content: center;
+
+            &__circle {
+                border: 10px solid white;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 100vmin;
+                overflow: hidden;
+                width: 50vmin;
+                height: 50vmin;
+                font-size:  50px;
+                text-align: center;
+                text-overflow: ellipsis;
+            }
         }
+    } 
+}
+
+.ppi-basket {
+    position: absolute;
+    width: 10vmin;
+    bottom: 5vmin;
+    left: calc(50% - 5vmin);
+    opacity: 0.4;
+    transition: opacity 1s;
+    cursor: pointer;
+
+    &:hover {
+        opacity: 0.8;
+    }
+}
+
+.ppi-greating {
+    display: flex;
+    flex-grow: 1;
+    align-items: center;
+    justify-content: center;
+
+    &__circle {
+        border: 10px solid white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 100vmin;
+        overflow: hidden;
+        width: 50vmin;
+        height: 50vmin;
+        font-size:  50px;
+        text-align: center;
+        text-overflow: ellipsis;
+    }
+}
+
+.ppi-dnd-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100vmin;
+    overflow: hidden;
+    width: 25vmin;
+    height: 25vmin;
+    background-color: white;
+    cursor: pointer;
+    transition: box-shadow 1s;
+    font-size: 30px;
+    text-align: center;
+    text-overflow: ellipsis;
+    color: gray;
+
+    &:hover {
+        background-color: whitesmoke;
+        box-shadow: inset 0px 0px 45px -5px black;
     }
 }
