--- a/src/pages/activities/activities.scss
+++ b/src/pages/activities/activities.scss
@@ -8,18 +8,28 @@ page-activities {
         align-items: center;
 
         &_people, &_activities {
+            z-index: 10;
             width: 40vmin;
             height: 100%;
             flex-grow: 1;
-        }
-
-        &_activities {
-            z-index: 10;
-            flex-grow: 1;
-            align-items: center;
-            justify-content: center;
             display: flex;
+            justify-content: center;
+            align-items: center;
             position: relative;
         }
-    } 
+    }
+
+    .ppi-circle {
+        border: 3px solid white;
+        background: 3px solid white;
+        opacity: 0.7;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        img {
+            width: 70%;
+            height: 70%;
+        }
+    }
 }
