--- a/src/pages/places/places.scss
+++ b/src/pages/places/places.scss
@@ -65,6 +65,7 @@ page-places {
                 img {
                     width: 100%;
                     height: 100%;
+                    pointer-events: none;
                 }
 
                 &:hover {
@@ -75,7 +76,7 @@ page-places {
 
             &__dnd-place {
                 background-color: whitesmoke;
-                &:hover {
+                &.ppi-dnd-place-active {
                     background-color: whitesmoke;
                     border-color: whitesmoke;                    
                     box-shadow: inset 0px 0px 15px -5px black;
@@ -101,5 +102,10 @@ page-places {
                 }
             }
         }
-    } 
+    }
+
+    .ppi-dragging-circle {
+        position: absolute;
+        cursor: pointer;
+    }
 }
