--- a/src/pages/people/people.scss
+++ b/src/pages/people/people.scss
@@ -31,4 +31,8 @@ page-people {
             height: 100%; 
         }
     }
+
+    .ppi-circle.ppi-blured-circle {
+        border-color: gray!important;
+    }
 }
