--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -75,6 +75,8 @@ ion-content {
     text-align: center;
     text-overflow: ellipsis;
     color: gray;
+    overflow: hidden;
+    position: relative;
 
     img {
         width: 100%;
