--- a/src/pages/editData/editPerson/editPerson.scss
+++ b/src/pages/editData/editPerson/editPerson.scss
@@ -1,19 +1,3 @@
-page-edit-person {
+widget-edit-person {
 
-}
-
-.fields-list {
-    display: flex;
-    flex-direction: column;
-}
-
-.ppi-text-input {
-    border: 2px solid #b9c7c1;
-    box-shadow: inset 0px 0px 13px -5px black;
-    font-size: 22px;
-    color: #949494;
-    border-radius: 5px;
-    margin-bottom: 10px;
-    height: 40px;
-    padding: 5px;
 }
