--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -65,19 +65,30 @@ ion-content {
     align-items: center;
     justify-content: center;
     border-radius: 100vmin;
+    border: 4px solid white;
     overflow: hidden;
-    width: 25vmin;
-    height: 25vmin;
-    background-color: white;
+    width: 30vmin;
+    height: 30vmin;
+    background-color: rgba(255, 255, 255, 0.37);
     cursor: pointer;
     transition: box-shadow 0.5s;
     font-size: 30px;
     text-align: center;
     text-overflow: ellipsis;
-    color: gray;
+    color: black;
     overflow: hidden;
     position: relative;
+    box-shadow: 0px 0px 20px 0px #0072ff;
 
+    &:before {
+        content: '';
+        box-shadow: inset 0px 0px 20px 0px #0072ff;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        border-radius: 100%;
+        pointer-events: none;
+    }
     img {
         width: 100%;
         height: 100%;
@@ -85,30 +96,25 @@ ion-content {
 
     &.ppi-dnd-button-active {
         background-color: whitesmoke;
-        box-shadow: inset 0px 0px 45px -5px black;
+        box-shadow: 0px 0px 45px -5px black;
     }
 }
 
 .ppi-circle.ppi-dragging-circle,
 .ppi-circle.ppi-selected-circle.ppi-dragging-circle {
-    box-shadow: 1px 1px 20px 0px black;
+    box-shadow: 1px 1px 30px 0px black;
     z-index: 200;
-    width: 15vmin;
-    height: 15vmin;
-    margin-top: - 7.5vmin;
-    margin-left: - 7.5vmin;
+    border: 2px solid rgb(28, 226, 144);
 }
 
 .ppi-circle.ppi-selected-circle {
+    box-shadow: 1px 1px 18px 6px #4e9e88;
     z-index: 200;
-    width: 25vmin;
-    height: 25vmin;
-    margin-top: - 12.5vmin;
-    margin-left: - 12.5vmin;
+    border: 2px solid rgb(28, 226, 144);
 }
 
 .ppi-circle.ppi-blured-circle {
-    opacity: 0.4;
+    opacity: 0.2;
     img {
         filter: grayscale(100%);
     }
@@ -116,12 +122,13 @@ ion-content {
 
 .ppi-circle {
     position: absolute;
-    width: 10vmin;
-    height: 10vmin;
+    width: 15vmin;
+    height: 15vmin;
     background-color: white;
-    margin-top: - 5vmin;
-    margin-left: - 5vmin;
+    margin-top: - 7.5vmin;
+    margin-left: - 7.5vmin;
     border-radius: 100vmin;
+    z-index: 10;
     top: 100px;
     left: 100px;
     overflow: hidden;
@@ -142,6 +149,36 @@ ion-content {
         // height: 15vmin;
         // margin-top: - 7.5vmin;
         // margin-left: - 7.5vmin;
+    }
+
+    font-size: 10px;
+
+    &__name {
+        position: absolute;
+        background-color: white;
+        width: 100%;
+        bottom: 0;
+        padding: 5px 30px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-family: fantasy;
+    }
+
+    &__name-top {
+        position: absolute;
+        background-color: white;
+        width: 100%;
+        top: 0;
+        padding: 5px 30px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-family: fantasy;
     }
 }
 
