--- a/src/pages/main/main.scss
+++ b/src/pages/main/main.scss
@@ -5,20 +5,54 @@ page-main {
         display: flex;
         box-sizing: border-box;
         overflow: hidden;
-        align-items: center;
+        align-items: stretch;
+        justify-content: stretch;
+    }
 
-        &_people, &_activities {
-            z-index: 10;
-            flex-grow: 1;
+    .ppi-making-call-button {
+        position: absolute;
+        left: 50%;
+        width: 10vmin;
+        height: 10vmin;
+        background-color: #1fea1a;
+        margin-left: - 5vmin;
+        border-radius: 100vmin;
+        box-shadow: 1px 1px 18px 6px #4e9e88;
+        z-index: 10;
+        border: 2px solid rgb(28, 226, 144);
+        overflow: hidden;
+        cursor: pointer;
+        transition: width 0.5s,
+                    height 0.5s,
+                    margin-top 0.5s,
+                    margin-left 0.5s;
+    
+        img {
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+        }
+        &:hover {
+            opacity: 1;
+            width: 15vmin;
+            height: 15vmin;
+            // margin-top: - 7.5vmin;
+            margin-left: - 7.5vmin;
+        }
+    
+        &__name {
+            position: absolute;
+            font-size: 10px!important;
+            background-color: white;
+            width: 100%;
+            bottom: 0;
+            padding: 5px 30px;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            display: flex;
             align-items: center;
             justify-content: center;
-            display: flex;
-
-            .ppi-circular-button {
-                width: 40vmin;
-                height: 40vmin;
-                background-color: white;
-            }
+            font-family: fantasy;
         }
-    } 
+    }
 }
