--- a/src/widgets/activities/activities.scss
+++ b/src/widgets/activities/activities.scss
@@ -1,4 +1,6 @@
-page-activities {
+widget-activities {
+    flex-grow: 1;
+    border-left: 1px solid rgba(0, 128, 0, 0.137);
     .ppi-activities-screen {
         width: 100%;
         height: 100%;
@@ -6,6 +8,12 @@ page-activities {
         box-sizing: border-box;
         overflow: hidden;
         align-items: center;
+
+        .ppi-dnd-button {
+            position: absolute;
+            top: 40px;
+            right: 40px;
+        }
 
         &_people, &_activities {
             z-index: 10;
@@ -20,17 +28,9 @@ page-activities {
     }
 
     .ppi-circle {
-        border: 3px solid white;
-        background: 3px solid white;
-        opacity: 0.7;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        img {
-            width: 70%;
-            height: 70%;
-        }
+        border: none;
+        background: white;
+        opacity: 0.8;
     }
 
     .ppi-skip-button {
