--- a/src/widgets/places/places.scss
+++ b/src/widgets/places/places.scss
@@ -1,4 +1,9 @@
-page-places {
+widget-places {
+    position: absolute;
+    left: calc(50% - 40vmin);
+    bottom: 5vmin;
+    z-index: 200;
+
     .ppi-places-screen {
         width: 100%;
         height: 100%;
@@ -19,19 +24,23 @@ page-places {
         }
 
         &_places {
-            z-index: 15;
-            position: absolute;
             width: 80vmin;
             height: 12vmin;
-            background-color: white;
+            background-color: rgba(255, 255, 255, 0.3);
             overflow: hidden;
-            bottom: 5vmin;
-            left: calc(50% - 40vmin);
             display: flex;
             border-radius: 100vmin;
             box-sizing: border-box;
             padding: 1vmin;
             box-shadow: 0px 0px 17px -4px black;
+
+            h2 {
+                position: absolute;
+                color: white;
+                top: -35px;
+                width: 100%;
+                text-align: center;
+            }
 
             &__dnd-place {
                 display: flex;
@@ -47,6 +56,7 @@ page-places {
                 display: flex;
                 overflow-y: hidden;
                 overflow-x: auto;
+                justify-content: center;
             }
 
             .ppi-place, &__basket, &__dnd-place {
@@ -71,6 +81,20 @@ page-places {
                 &:hover {
                     border-color: darkgray;
                     background-color: darkgray;
+                }
+            }
+
+            .ppi-selected-place {
+                position: relative;
+                box-shadow: 0px 0px 20px 0px #0072ff;
+                &:before {
+                    content: '';
+                    box-shadow: inset 0px 0px 20px 0px #0072ff;
+                    width: 100%;
+                    height: 100%;
+                    position: absolute;
+                    border-radius: 100%;
+                    pointer-events: none;
                 }
             }
 
